fix vertical display on iphone.

--- a/kiln_control/assets/css/kiln_control.css
+++ b/kiln_control/assets/css/kiln_control.css
@@ -6,14 +6,14 @@ body {
 #status {
     display: flex;
     background: #000000;
-    flex-wrap: wrap; /* Allows items to wrap onto multiple lines if needed */
+    flex-wrap: nowrap; /* Prevents wrapping */
     justify-content: space-between; /* Spreads out the items evenly */
     margin-top: 15px;
     color: #272786;
     border-radius: 5px;
     border: 1px solid #dddddd;
+    overflow-x: auto; /* Allows horizontal scrolling if items don't fit */
 }
-
 
 #progress {
     background: #5d5145;
@@ -24,8 +24,8 @@ body {
 }
 
 .status-item {
-    flex-basis: calc(25% - 20px); /* Adjusts each item's base width */
-    margin: 10px; /* Provides spacing between items */
+    flex-basis: calc(25% - 10px); /* Adjusts each item's base width */
+    margin: 5px; /* Provides spacing between items */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,8 +59,6 @@ body {
 .ds-unit {
     font-family: "Arial", sans-serif;
     font-size: .6em;
-    vertical-align: top;
-    line-height: 32px;
     color: #d8d3c5;
     margin-left: 4px;
 }
@@ -71,27 +69,23 @@ body {
 
 
 .ds-state {
-    font-family: "Arial", sans-serif;
-    font-size: 2em;
-    vertical-align: top;
-    line-height: 32px;
     color: #d8d3c5;
-    margin-left: 4px;
 }
 
 /* For smaller screens */
 @media (max-width: 768px) {
     .ds-title {
-        font-size: 1em; /* Smaller font size */
-        padding: 3px; /* Reduced padding */
+        font-size: 0.8em; /* Smaller font size */
     }
 
     .display {
-        font-size: 1.5em; /* Smaller font size */
-        padding: 3px; /* Reduced padding */
+        font-size: 1.3em; /* Smaller font size */
+    }
+
+    .status-item {
+        flex-basis: 20%; /* Reduces width on smaller screens */
     }
 }
-
 .ds-input {
     color: #111111;
     font-family: "Digi", monospace;
